Adds bottom bar to the main activity interface. Adds string resources and dimensions used to display the bottom bar.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">KSP Orbital Kalculator</string>
+
+    <string name="calculator_tab_label">Calculator</string>
+    <string name="phase_tab_label">Phase Angle</string>
+    <string name="eject_tab_label">Eject Angle</string>
 </resources>
